# fresco

./: .gitignore  .travis.yaml  .travis.yml  LICENSE.txt  README.md  build.bat  dodo.py
arriccio/: README.md  aio_test.go  main.go
component/: Intonaco
ctypes/: interfaces.h
docs/: index.html  index.md  test.md
haskell/: Fresco.hs  LICENSE  Setup.hs  fresco-binding.cabal  fresco-binding.cabal.tmpl  stack.yaml
haskell-binding/: LICENSE  fresco-binding.cabal  stack.yaml
haskell-binding/Fresco/: Component.hs  Entity.hs  System.hs
haskell/Fresco/: Component.hs  Entity.hs  System.hs
interface/: Cube  Intonaco
intonaco/: Cargo.toml  arriccio.toml  build.bat  build.rs  build.sh
intonaco/intonaco/: Cargo.toml  arriccio.toml
intonaco/intonaco/src/: cif.rs  component.rs  entity.rs  ftypes.rs
intonaco/scripts/: build.lua
intonaco/src/: cif.rs  lib.rs  lockfree_value.rs  system.rs  thread_guard.rs
lualib/: os_arch.lua
scripts/: arriccio.sh  build.lua  prepare-debian.sh
sinopia/: EntityId.sp  LICENSE  fresco-sinopia.cabal  stack.yaml
sinopia/src/: sinopia.hs
sinopia/src/Sinopia/: C.hs  Data.hs  Haskell.hs  JavaScript.hs  Parser.hs  Rust.hs  Util.hs
sinopia/test/: HaskellSpec.hs  ParserSpec.hs  Spec.hs
types/ctypes/: functor.cpp
