#
#  Fresco Framework for Multi-Language Programming
#  Copyright 2015-2016 Peter Althainz
#    
#  Distributed under the Apache License, Version 2.0
#  (See attached file LICENSE or copy at 
#  http:#www.apache.org/licenses/LICENSE-2.0)
# 
#  file: intonaco/Cargo.toml
#

[package]
name = "intonaco"
version = "0.1.0"
authors = ["uotbw <info@hgamer3d.org>"]

[lib]
crate-type = ["dylib"]

[dependencies]
libc = "*"
rmp-serialize = "^0.7"
rmp = "^0.7"
rustc-serialize = "^0.3"
lazy_static = "0.1.15"
crossbeam = "0.2.5"
snowflake = "1.0.0"
libloading = "0.2.1"